--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 <!-- load the d3.js library -->	
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<!-- <script type="text/javascript" src="d3.min.js"></script> -->
 	
 <script>
 
