change to https
The original call uses http which github blocks. Change the request to https.  Manually verified that this works correctly.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
   <body>
 
 <!-- load the d3.js library -->	
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<!-- Version 4 -->
 <!-- <script type="text/javascript" src="d3.min.js"></script> -->
+<!-- Does not use https therefore github blocks the request -->
+<!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+<script src="https://d3js.org/d3.v3.min.js"></script>
+
 	
 <script>
 
