--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
   <body>
 
 <!-- load the d3.js library -->	
-<!-- Version 4 -->
-<!-- <script type="text/javascript" src="d3.min.js"></script> -->
+<script type="text/javascript" src="d3.v3.min.js"></script>
 <!-- Does not use https therefore github blocks the request -->
 <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<!-- <script src="https://d3js.org/d3.v3.min.js"></script> -->
 
 	
 <script>
